--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-babel": "^5.1.0",
     "gulp-browserify": "^0.5.1",
     "gulp-sass": "^2.0.1",
+    "gulp-shell": "^0.4.2",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-webserver": "^0.9.1",
     "spa-server": "^0.1.0",
